# maxtgfwd

./: .gitignore  Dockerfile  compose.yml  config.yml  pyproject.toml
.github/workflows/: build_and_push.yml  deploy.yml
maxtgfwd/: __main__.py  config.py  max_client.py  max_integration.py  message.py  telegram_integration.py
